# ggcapture

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
example/: CMakeLists.txt  ggcapture_example.cc  main.cc
include/: ggcapture.h
src/: ggcapture.cc  main.cc
